# workshop-ai-images-video

./: .gitignore  README.md  pyproject.toml  workshop.yml
data/: car_classifications.csv  meeting.txt
demos/: CLAUDE.md  README.md  WALKTHROUGH.md  pyproject.toml
demos/audio/: README.md  diarize-pyannote.py  gemini-diarize.py  gemini-timestamp.py  gemini-tokens.py  gemini.py  parakeet.py  pyannote.py  transcribe-parakeet.py  transcribe-whisperx.py  wer.py  whisper.py  whisperx-diarize.py  whisperx.py
demos/classification/: README.md  clip-batch.py  clip.py
demos/detection/: README.md  florence2.py  gdino.py  rfdetr.py  yolo11.py  yolo26.py  yoloe-coffee.py  yoloe-text.py  yoloe-visual.py
demos/documents/: README.md  classify-pages.py  doc-to-md.py  extract-pdf-pydantic.py  extract-pdf.py  extract-pydantic.py  extract.py  florence2.py  llm-ocr.py  pdf-ocr.py
demos/recipes/: README.md  ad-counting.py  batch-classify.py  cost.py  keyword-clips.py  meeting-minutes.py  photo-search.py  redact-faces.py  screen-time.py  speaker-time.py  wer.py
demos/search/: README.md  index.py  query.py
demos/tracking/: README.md  annotated.py  count.py  detect.py  gemini-count.py  track.py
demos/video/: README.md  audio.py  decompose-classify.py  download.py  frames.py  gemini-structured.py  gemini-timestamp.py  gemini-upload.py  gemini-youtube.py  scenes.py  vibe-answer.py
demos/vision-llm/: README.md  basic.py  batch.py  providers.py  raw-openai-text.py  raw-openai.py  structured.py
docs/: index.html
docs/nicar-2026/: 01-images.html  02-documents.html  03-audio.html  04-video.html  05-recipes.html  06-tracking.html  07-video-deep-dive.html  index.html
notebooks/nicar-2026/: 01-images.ipynb  02-documents.ipynb  03-audio.ipynb  04-video.ipynb  05-recipes.ipynb  06-tracking.ipynb  07-video-deep-dive.ipynb
workshops/nicar-2026/: 01-images.md  02-documents.md  03-audio.md  04-video.md  05-recipes.md  06-tracking.md  07-video-deep-dive.md  index.md
